--- a/PowerPack/v.01/PowerPack/src/Generator.mxml
+++ b/PowerPack/v.01/PowerPack/src/Generator.mxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:WindowedApplication 
 	xmlns:mx="http://www.adobe.com/2006/mxml" 
-	xmlns:ExtendedAPI="ExtendedAPI.com.controls.*"
+	xmlns:ExtendedAPI="net.vdombox.powerpack.lib.ExtendedAPI.controls.*"
 	xmlns:customize="net.vdombox.powerpack.customize.*"
 	width="770" height="450" verticalAlign="middle" horizontalAlign="center" layout="absolute"	 
 	showStatusBar="false" showGripper="false"
@@ -11,7 +11,7 @@
 	statusBarFactory="net.vdombox.powerpack.customize.core.windowClasses.SuperStatusBar"
 	initialize="init()" 
 	applicationComplete="show()"
-	updateComplete="complete()">
+	updateComplete="complete()" xmlns:controls="net.vdombox.powerpack.lib.ExtendedAPI.controls.*">
 	
 	<mx:Style source="assets/style/generator.css"/>
 	
@@ -45,8 +45,8 @@
     	
 	<mx:Script>
 		<![CDATA[
-		import ExtendedAPI.com.containers.SuperAlert;
-		import ExtendedAPI.com.utils.FileUtils;
+		import net.vdombox.powerpack.lib.ExtendedAPI.containers.SuperAlert;
+		import net.vdombox.powerpack.lib.ExtendedAPI.utils.FileUtils;
 
 		import GraphicAPI.GraphicUtils;
 		import GraphicAPI.imageProcessing.Filters;
@@ -875,7 +875,7 @@
 			
 		<mx:HBox width="100%" height="100%" verticalAlign="middle" horizontalAlign="left" 
 			paddingTop="10" paddingRight="10" paddingLeft="10" paddingBottom="10">
-			<ExtendedAPI:Base64Image id="tplPic" source="{resources.strLogo}" horizontalAlign="right" width="220"
+			<controls:Base64Image id="tplPic" source="{resources.strLogo}" horizontalAlign="right" width="220"
 				showEffect="{picShow}" height="100%" verticalAlign="top"/>
 			<mx:VBox height="100%" width="100%" horizontalAlign="right">
 				
@@ -1003,7 +1003,7 @@
 						<mx:CheckBox id="chkSaveToFile" selected="{ContextManager.instance.saveToFile}"
 							label="{LanguageManager.sentences.save_to_file}"/>
 						
-						<ExtendedAPI:FileBrowseBox id="fileBrowse" width="90%" mode="save" 
+						<controls:FileBrowseBox id="fileBrowse" width="90%" mode="save" 
 						browseLabel="{LanguageManager.sentences.browse}..." 
 						browseTitle="{LanguageManager.sentences.open_file}..."
 						filterAll="{LanguageManager.sentences.all}"/>
