--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/GenConnection.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/GenConnection.mxml
@@ -3,7 +3,7 @@
 	xmlns:mx="http://www.adobe.com/2006/mxml"
 	xmlns="net.vdombox.powerpack.dialog.*"
 	xmlns:control="net.vdombox.powerpack.control.*"
-	xmlns:controls="ExtendedAPI.com.controls.*" 
+	xmlns:controls="net.vdombox.powerpack.lib.ExtendedAPI.controls.*" 
 	title="{LanguageManager.sentences.connection}"
 	width="450" height="300"
 	creationComplete="onShow()">
