--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/GenProperties.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/GenProperties.mxml
@@ -3,16 +3,17 @@
 	xmlns:mx="http://www.adobe.com/2006/mxml"
 	xmlns="net.vdombox.powerpack.dialog.*"
 	xmlns:control="net.vdombox.powerpack.control.*"
-	xmlns:controls="ExtendedAPI.com.controls.*" 
+	xmlns:controls="net.vdombox.powerpack.lib.ExtendedAPI.controls.*" 
 	title="{LanguageManager.sentences.properties}"
 	width="450" height="240" 
-	creationComplete="onShow()">
+	creationComplete="onShow()" 
+	xmlns:controls1="net.vdombox.powerpack.lib.ExtendedAPI.controls.*">
 	
 	<mx:Script>
 		<![CDATA[
 		import mx.events.CloseEvent;
 
-		import ExtendedAPI.com.utils.FileUtils;
+		import net.vdombox.powerpack.lib.ExtendedAPI.utils.FileUtils;
 
 		import mx.utils.StringUtil;
 
@@ -87,11 +88,11 @@
 					<mx:Label text="{LanguageManager.sentences.file}:"/>
 				</mx:GridItem>
 				<mx:GridItem width="100%" height="100%">
-					<controls:FileBrowseBox id="fileBrowse" width="300" mode="save" 
+					<controls1:FileBrowseBox id="fileBrowse" width="300" mode="save" 
 						browseLabel="{LanguageManager.sentences.browse}..." 
 						browseTitle="{LanguageManager.sentences.save_file}..."
 						filterAll="{LanguageManager.sentences.all}">
-					</controls:FileBrowseBox>
+					</controls1:FileBrowseBox>
 					<control:HelpTip toolTip="{LanguageManager.sentences.hlp_app_file}"/>
 				</mx:GridItem>
 			</mx:GridRow>
