--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/Import.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/Import.mxml
@@ -2,7 +2,7 @@
 <ModalDialog 
 	xmlns="net.vdombox.powerpack.dialog.*"
 	xmlns:mx="http://www.adobe.com/2006/mxml"
-	xmlns:controls="ExtendedAPI.com.controls.*" 
+	xmlns:controls="net.vdombox.powerpack.lib.ExtendedAPI.controls.*" 
 	xmlns:importClasses="net.vdombox.powerpack.dialog.importClasses.*"
 	width="450" height="460"
 	title="{LanguageManager.sentences.lbl_import}" 
@@ -14,11 +14,11 @@
 		<![CDATA[
 		import net.vdombox.powerpack.Template;
 
-		import ExtendedAPI.com.containers.SuperAlert;
+		import net.vdombox.powerpack.lib.ExtendedAPI.containers.SuperAlert;
 
 		import net.vdombox.powerpack.importation.ImportApp;
 
-		import ExtendedAPI.com.utils.FileUtils;
+		import net.vdombox.powerpack.lib.ExtendedAPI.utils.FileUtils;
 
 		import generated.webservices.Get_all_typesResultEvent;
 
