--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/ImportFromTpl.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/ImportFromTpl.mxml
@@ -5,18 +5,19 @@
 	width="500" height="360"
 	title="{LanguageManager.sentences.lbl_import}" 
 	creationComplete="onShow(event)" 
-	xmlns:controls="ExtendedAPI.com.controls.*">
+	xmlns:controls="net.vdombox.powerpack.lib.ExtendedAPI.controls.*" 
+	xmlns:controls1="net.vdombox.powerpack.lib.ExtendedAPI.controls.*">
 	
 	<mx:Script>
 		<![CDATA[
 		import net.vdombox.powerpack.Template;
 
-		import ExtendedAPI.com.containers.SuperAlert;
+		import net.vdombox.powerpack.lib.ExtendedAPI.containers.SuperAlert;
 
 		import mx.collections.SortField;
 		import mx.collections.Sort;
 
-		import ExtendedAPI.com.utils.FileUtils;
+		import net.vdombox.powerpack.lib.ExtendedAPI.utils.FileUtils;
 
 		import net.vdombox.powerpack.graph.GraphCanvas;
 
@@ -151,7 +152,7 @@
 				<mx:GridItem width="100%">
 					<mx:HBox width="100%">
 						<mx:Label text="{LanguageManager.sentences.template_path}:"/>
-						<controls:FileBrowseBox id="tplBrowse" width="100%" mode="open" 
+						<controls1:FileBrowseBox id="tplBrowse" width="100%" mode="open" 
 							browseLabel="{LanguageManager.sentences.browse}..." 
 							browseTitle="{LanguageManager.sentences.open_file}..."
 							filterAll="{LanguageManager.sentences.all}" 
