--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/TemplateProperties.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/TemplateProperties.mxml
@@ -5,7 +5,8 @@
 	width="500" height="460"
 	title="{LanguageManager.sentences.properties}" 
 	creationComplete="onShow(event)" 
-	xmlns:controls="ExtendedAPI.com.controls.*">
+	xmlns:controls="net.vdombox.powerpack.lib.ExtendedAPI.controls.*" 
+	xmlns:controls1="net.vdombox.powerpack.lib.ExtendedAPI.controls.*">
 	
 	<mx:Script>
 		<![CDATA[
@@ -130,7 +131,7 @@
 			
 			<mx:GridRow width="100%" height="100%">
 				<mx:GridItem width="100%" height="100%" colSpan="2">
-					<controls:HDivider label="{LanguageManager.sentences.template_picture}"/>
+					<controls1:HDivider label="{LanguageManager.sentences.template_picture}"/>
 				</mx:GridItem>
 			</mx:GridRow>
 			
@@ -139,7 +140,7 @@
 					<mx:Label text="{LanguageManager.sentences.template_picture}:"/>
 				</mx:GridItem>
 				<mx:GridItem width="100%" height="100%">
-					<controls:FileBrowseBox id="picBrowse" width="300" mode="open" 
+					<controls1:FileBrowseBox id="picBrowse" width="300" mode="open" 
 						browseLabel="{LanguageManager.sentences.browse}..." 
 						browseTitle="{LanguageManager.sentences.open_file}..."
 						filterAll="{LanguageManager.sentences.all}"
@@ -153,7 +154,7 @@
 				</mx:GridItem>
 				<mx:GridItem width="100%" height="100%">					
 					<mx:Image width="100" height="100" scaleContent="true" autoLoad="true" id="tplImg"/>
-					<controls:Base64Image width="100" height="100" scaleContent="true" autoLoad="true" id="b64Img"/>
+					<controls1:Base64Image width="100" height="100" scaleContent="true" autoLoad="true" id="b64Img"/>
 					<mx:Button id="btnRemovePic" label="{LanguageManager.sentences.remove}" 
 						click="removePicture()"/>
 				</mx:GridItem>
