--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/Graphs.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/Graphs.mxml
@@ -37,9 +37,9 @@
 
 	<mx:Script>
 		<![CDATA[
-		import ExtendedAPI.com.containers.SuperAlert;
-		import ExtendedAPI.com.utils.ObjectUtils;
-		import ExtendedAPI.com.utils.Utils;
+		import net.vdombox.powerpack.lib.ExtendedAPI.containers.SuperAlert;
+		import net.vdombox.powerpack.lib.ExtendedAPI.utils.ObjectUtils;
+		import net.vdombox.powerpack.lib.ExtendedAPI.utils.Utils;
 
 		import mx.binding.utils.*;
 		import mx.collections.ArrayCollection;
