--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/Output.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/Output.mxml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:VBox 
 	xmlns:mx="http://www.adobe.com/2006/mxml"
-	xmlns:controls="ExtendedAPI.com.controls.*" 
+	xmlns:controls="net.vdombox.powerpack.lib.ExtendedAPI.controls.*" 
 	width="100%" height="100%"
 	verticalGap="0" 
-	label="{LanguageManager.sentences.output_title}">
+	label="{LanguageManager.sentences.output_title}" 
+	xmlns:controls1="net.vdombox.powerpack.lib.ExtendedAPI.controls.*">
 	
 	<mx:String id="text"/>
 	<mx:String id="description"/>	
@@ -30,7 +31,7 @@
 	
 	<mx:Label text="{description}" visible="false" includeInLayout="false"/>
 	
-	<controls:SuperTextArea editable="false" borderStyle="solid" 
+	<controls1:SuperTextArea editable="false" borderStyle="solid" 
 		verticalScrollPolicy="on" horizontalScrollPolicy="on" 
 		id="textArea" width="100%" height="100%" text="{text}"/>	
 	
