--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/Problems.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/Problems.mxml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:VBox 
 	xmlns:mx="http://www.adobe.com/2006/mxml"
-	xmlns:controls="ExtendedAPI.com.controls.*" 
+	xmlns:controls="net.vdombox.powerpack.lib.ExtendedAPI.controls.*" 
 	width="100%" height="100%"
 	verticalGap="0" 
 	label="{LanguageManager.sentences.problems_title}"
 	initialize="init()"
-	icon="{ContextManager.problemsClass}">
+	icon="{ContextManager.problemsClass}" xmlns:controls1="net.vdombox.powerpack.lib.ExtendedAPI.controls.*">
 	
 	<mx:String id="description">0 errors, 0 warnings</mx:String>
 	<mx:Array id="array"/>
@@ -86,7 +86,7 @@
 	
 	<mx:Label text="{description}"/>	
 									
-	<controls:SuperDataGrid doubleClickEnabled="true"  
+	<controls1:SuperDataGrid doubleClickEnabled="true"  
 		id="grid" 
 		designViewDataType="tree" 
 		width="100%" height="100%"
@@ -102,6 +102,6 @@
 	    		editable="false"
 	    		showDataTips="true"/>
 	  	</controls:columns>
-	</controls:SuperDataGrid>	
+	</controls1:SuperDataGrid>	
 
 </mx:VBox>
