--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/Variables.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/Variables.mxml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:VBox 
 	xmlns:mx="http://www.adobe.com/2006/mxml"
-	xmlns:controls="ExtendedAPI.com.controls.*" 
+	xmlns:controls="net.vdombox.powerpack.lib.ExtendedAPI.controls.*" 
 	paddingTop="5" paddingBottom="5" paddingLeft="5" paddingRight="5"
 	width="100%" height="100%"
 	label="{LanguageManager.sentences.variables_title}"
-	icon="{ContextManager.variablesClass}">
+	icon="{ContextManager.variablesClass}" 
+	xmlns:controls1="net.vdombox.powerpack.lib.ExtendedAPI.controls.*">
 	
 	<mx:Script>
 		<![CDATA[
@@ -27,7 +28,7 @@
 		]]>
 	</mx:Script>
 	
-	<controls:SuperDataGrid id="grid" designViewDataType="tree" 
+	<controls1:SuperDataGrid id="grid" designViewDataType="tree" 
 		width="100%" height="100%"
 		defaultLeafIcon="{null}"
 		folderOpenIcon="{null}"
@@ -44,7 +45,7 @@
          		dataTipField="Value" 
          		showDataTips="true"/>
       	</controls:columns>
-	</controls:SuperDataGrid>
+	</controls1:SuperDataGrid>
 	
 	<mx:TextInput id="txt" width="100%" text="{grid.selectedItem.Value}"/>	
 	
