rename extendedapi folder
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7486 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/ExtendedAPI/net/vdombox/powerpack/lib/extendedapi/controls/FileBrowseBox.mxml
+++ b/PowerPack/v.01/ExtendedAPI/net/vdombox/powerpack/lib/extendedapi/controls/FileBrowseBox.mxml
@@ -24,7 +24,7 @@
 			import mx.events.ChildExistenceChangedEvent;
 			import mx.events.FlexEvent;
 			import mx.core.UIComponent;
-			import net.vdombox.powerpack.lib.ExtendedAPI.utils.FileUtils;
+			import net.vdombox.powerpack.lib.extendedapi.utils.FileUtils;
 			import mx.utils.StringUtil;
 			
 			public static const MODE_OPEN:String = "open";
