--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/TemplateProperties.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/TemplateProperties.mxml
@@ -5,8 +5,8 @@
 	width="500" height="460"
 	title="{LanguageManager.sentences.properties}" 
 	creationComplete="onShow(event)" 
-	xmlns:controls="net.vdombox.powerpack.lib.ExtendedAPI.controls.*" 
-	xmlns:controls1="net.vdombox.powerpack.lib.ExtendedAPI.controls.*">
+	xmlns:controls="net.vdombox.powerpack.lib.extendedapi.controls.*" 
+	xmlns:controls1="net.vdombox.powerpack.lib.extendedapi.controls.*">
 	
 	<mx:Script>
 		<![CDATA[
