--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/Problems.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/Problems.mxml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:VBox 
 	xmlns:mx="http://www.adobe.com/2006/mxml"
-	xmlns:controls="net.vdombox.powerpack.lib.ExtendedAPI.controls.*" 
+	xmlns:controls="net.vdombox.powerpack.lib.extendedapi.controls.*" 
 	width="100%" height="100%"
 	verticalGap="0" 
 	label="{LanguageManager.sentences.problems_title}"
 	initialize="init()"
-	icon="{ContextManager.problemsClass}" xmlns:controls1="net.vdombox.powerpack.lib.ExtendedAPI.controls.*">
+	icon="{ContextManager.problemsClass}" xmlns:controls1="net.vdombox.powerpack.lib.extendedapi.controls.*">
 	
 	<mx:String id="description">0 errors, 0 warnings</mx:String>
 	<mx:Array id="array"/>
