--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/Variables.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/Variables.mxml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:VBox 
 	xmlns:mx="http://www.adobe.com/2006/mxml"
-	xmlns:controls="net.vdombox.powerpack.lib.ExtendedAPI.controls.*" 
+	xmlns:controls="net.vdombox.powerpack.lib.extendedapi.controls.*" 
 	paddingTop="5" paddingBottom="5" paddingLeft="5" paddingRight="5"
 	width="100%" height="100%"
 	label="{LanguageManager.sentences.variables_title}"
 	icon="{ContextManager.variablesClass}" 
-	xmlns:controls1="net.vdombox.powerpack.lib.ExtendedAPI.controls.*">
+	xmlns:controls1="net.vdombox.powerpack.lib.extendedapi.controls.*">
 	
 	<mx:Script>
 		<![CDATA[
