--- a/PowerPack/v.01/PowerPack/src/Generator.mxml
+++ b/PowerPack/v.01/PowerPack/src/Generator.mxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:WindowedApplication 
 	xmlns:mx="http://www.adobe.com/2006/mxml" 
-	xmlns:extendedapi="net.vdombox.powerpack.lib.extendedapi.controls.*"
 	xmlns:customize="net.vdombox.powerpack.customize.*"
 	width="770" height="450" verticalAlign="middle" horizontalAlign="center" layout="absolute"	 
 	showStatusBar="false" showGripper="false"
@@ -11,7 +10,8 @@
 	statusBarFactory="net.vdombox.powerpack.customize.core.windowClasses.SuperStatusBar"
 	initialize="init()" 
 	applicationComplete="show()"
-	updateComplete="complete()" xmlns:controls="net.vdombox.powerpack.lib.extendedapi.controls.*">
+	updateComplete="complete()" 
+	xmlns:controls="src.net.vdombox.powerpack.lib.extendedapi.controls.*">
 	
 	<mx:Style source="assets/style/generator.css"/>
 	
@@ -45,8 +45,8 @@
     	
 	<mx:Script>
 		<![CDATA[
-		import net.vdombox.powerpack.lib.extendedapi.containers.SuperAlert;
-		import net.vdombox.powerpack.lib.extendedapi.utils.FileUtils;
+		import src.net.vdombox.powerpack.lib.extendedapi.containers.SuperAlert;
+		import src.net.vdombox.powerpack.lib.extendedapi.utils.FileUtils;
 
 		import GraphicAPI.GraphicUtils;
 		import GraphicAPI.imageProcessing.Filters;
