--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/ModalDialog.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/ModalDialog.mxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<containers:SuperWindow xmlns="net.vdombox.powerpack.lib.extendedapi.containers.*" 
+<SuperWindow xmlns="src.net.vdombox.powerpack.lib.extendedapi.containers.*" 
 	xmlns:mx="http://www.adobe.com/2006/mxml" 
 	width="400" height="300" visible="true"
 	titleIcon="@Embed(source='/assets/icons/icon_16.png')"
@@ -9,7 +9,7 @@
 	parentWindow="{NativeApplication.nativeApplication.activeWindow}"
 	showStatusBar="false"
 	minimizable="false"
-	resizable="false" xmlns:containers="net.vdombox.powerpack.lib.extendedapi.containers.*">
+	resizable="false">
 	 
 	<mx:Script>
 		<![CDATA[
@@ -182,4 +182,4 @@
 		]]>
 	</mx:Script>
 		
-</containers:SuperWindow>
+</SuperWindow>
