--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/TemplateProperties.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/TemplateProperties.mxml
@@ -5,8 +5,7 @@
 	width="500" height="460"
 	title="{LanguageManager.sentences.properties}" 
 	creationComplete="onShow(event)" 
-	xmlns:controls="net.vdombox.powerpack.lib.extendedapi.controls.*" 
-	xmlns:controls1="net.vdombox.powerpack.lib.extendedapi.controls.*">
+	xmlns:controls="src.net.vdombox.powerpack.lib.extendedapi.controls.*">
 	
 	<mx:Script>
 		<![CDATA[
@@ -131,7 +130,7 @@
 			
 			<mx:GridRow width="100%" height="100%">
 				<mx:GridItem width="100%" height="100%" colSpan="2">
-					<controls1:HDivider label="{LanguageManager.sentences.template_picture}"/>
+					<controls:HDivider label="{LanguageManager.sentences.template_picture}"/>
 				</mx:GridItem>
 			</mx:GridRow>
 			
@@ -140,7 +139,7 @@
 					<mx:Label text="{LanguageManager.sentences.template_picture}:"/>
 				</mx:GridItem>
 				<mx:GridItem width="100%" height="100%">
-					<controls1:FileBrowseBox id="picBrowse" width="300" mode="open" 
+					<controls:FileBrowseBox id="picBrowse" width="300" mode="open" 
 						browseLabel="{LanguageManager.sentences.browse}..." 
 						browseTitle="{LanguageManager.sentences.open_file}..."
 						filterAll="{LanguageManager.sentences.all}"
@@ -154,7 +153,7 @@
 				</mx:GridItem>
 				<mx:GridItem width="100%" height="100%">					
 					<mx:Image width="100" height="100" scaleContent="true" autoLoad="true" id="tplImg"/>
-					<controls1:Base64Image width="100" height="100" scaleContent="true" autoLoad="true" id="b64Img"/>
+					<controls:Base64Image width="100" height="100" scaleContent="true" autoLoad="true" id="b64Img"/>
 					<mx:Button id="btnRemovePic" label="{LanguageManager.sentences.remove}" 
 						click="removePicture()"/>
 				</mx:GridItem>
