--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/importClasses/ImportStep1.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/importClasses/ImportStep1.mxml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:VBox xmlns:mx="http://www.adobe.com/2006/mxml" 
-	xmlns:controls="net.vdombox.powerpack.lib.extendedapi.controls.*"
-	creationComplete="onShow()" 
-	xmlns:controls1="net.vdombox.powerpack.lib.extendedapi.controls.*">
+	xmlns:controls="src.net.vdombox.powerpack.lib.extendedapi.controls.*"
+	creationComplete="onShow()">
 
 	<mx:Script>
 		<![CDATA[
@@ -47,7 +46,7 @@
 	<mx:Grid width="100%">
 		<mx:GridRow>
 			<mx:GridItem colSpan="2">
-				<controls1:HDivider label="{LanguageManager.sentences.import_from}:"/>
+				<controls:HDivider label="{LanguageManager.sentences.import_from}:"/>
 				<mx:RadioButtonGroup id="importType" change="handleImport();" itemClick="handleImport();"/>
 			</mx:GridItem>
 		</mx:GridRow>
@@ -58,11 +57,11 @@
 			        label="{LanguageManager.sentences.import_from_file}:"/>    			        
 			</mx:GridItem>
 			<mx:GridItem>
-				<controls1:FileBrowseBox id="fileBrowse" width="300" mode="open" enabled="false"
+				<controls:FileBrowseBox id="fileBrowse" width="300" mode="open" enabled="false"
 						browseLabel="{LanguageManager.sentences.browse}..." 
 						browseTitle="{LanguageManager.sentences.open_file}..."
 						filterAll="{LanguageManager.sentences.all}">
-				</controls1:FileBrowseBox>
+				</controls:FileBrowseBox>
 			</mx:GridItem>
 		</mx:GridRow>
 		
@@ -87,7 +86,7 @@
 		
 		<mx:GridRow>
 			<mx:GridItem colSpan="2">
-				<controls1:HDivider label="{LanguageManager.sentences.connection}:" 
+				<controls:HDivider label="{LanguageManager.sentences.connection}:" 
 					enabled="{gridServer.enabled}"/>
 			</mx:GridItem>
 		</mx:GridRow>
@@ -134,7 +133,7 @@
 
 		<mx:GridRow>
 			<mx:GridItem colSpan="2">
-				<controls1:HDivider label="{LanguageManager.sentences.authentication}:" 
+				<controls:HDivider label="{LanguageManager.sentences.authentication}:" 
 					enabled="{gridServer.enabled}"/>
 			</mx:GridItem>
 		</mx:GridRow>
