--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/soap/Login.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/soap/Login.mxml
@@ -3,8 +3,7 @@
 	<mx:Canvas 
 		xmlns:mx="http://www.adobe.com/2006/mxml" 
 		width="404" height="218" 
-		xmlns:controls="net.vdombox.powerpack.lib.extendedapi.controls.*" xmlns:controls1="net.vdombox.powerpack.lib.extendedapi.controls.*"
-	>
+		xmlns:controls="src.net.vdombox.powerpack.lib.extendedapi.controls.*">
 	
 	
 
@@ -68,7 +67,7 @@
 		
 		<mx:GridRow>
 			<mx:GridItem colSpan="2">
-				<controls1:HDivider label="{LanguageManager.sentences.connection}:" 
+				<controls:HDivider label="{LanguageManager.sentences.connection}:" 
 								   enabled="{gridServer.enabled}"/>
 			</mx:GridItem>
 		</mx:GridRow>
@@ -87,7 +86,7 @@
 		
 		<mx:GridRow>
 			<mx:GridItem colSpan="2">
-				<controls1:HDivider label="{LanguageManager.sentences.authentication}:" 
+				<controls:HDivider label="{LanguageManager.sentences.authentication}:" 
 								   enabled="{gridServer.enabled}"/>
 			</mx:GridItem>
 		</mx:GridRow>
