--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/importClasses/ImportStep1.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/dialog/importClasses/ImportStep1.mxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:VBox xmlns:mx="http://www.adobe.com/2006/mxml" 
-	xmlns:controls="src.net.vdombox.powerpack.lib.extendedapi.controls.*"
+	xmlns:controls="net.vdombox.powerpack.lib.extendedapi.controls.*"
 	creationComplete="onShow()">
 
 	<mx:Script>
