git-svn-id: http://svn.vdombox.ru/flextools/trunk@7501 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack_lib/src/net/vdombox/powerpack/lib/extendedapi/controls/FileBrowseBox.mxml
+++ b/PowerPack/v.01/PowerPack_lib/src/net/vdombox/powerpack/lib/extendedapi/controls/FileBrowseBox.mxml
@@ -32,7 +32,7 @@
 			public static const MODE_DIR:String = "dir";
 			public static const MODE_MULTI:String = "multi";
 			
-			public static var memPath:String = File.documentsDirectory.nativePath;
+			public static var memPath:String = ""; //File.documentsDirectory.nativePath;
 
 			public var files:Array = [];
 			public var filterArray:Array = [];
@@ -135,7 +135,7 @@
             {
             	var file:File = event.target as File;
            		
-           		memPath = file.nativePath;
+           		//memPath = file.nativePath;
 				txtInput.text = file.nativePath;
 				
 				files = [];
@@ -151,8 +151,8 @@
             	
             	if(files && files.length)
             	{
-	           		memPath = File(files[0]).parent.nativePath;
-					txtInput.text = memPath;
+	           		//memPath = File(files[0]).parent.nativePath;
+					txtInput.text = File(files[0]).parent.nativePath;
 	
 					txtInput.dispatchEvent(new Event(Event.CHANGE));
             	}
